base/frontend/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    app: vote
    tier: front
spec:
  type: ClusterIP
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vote
