base/frontend/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-preview
  labels:
    role: vote
    app: vote
    tier: front
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30100
  selector:
    app: vote
